[package]
name = "simplegraph"
version = "0.2.1"
edition = "2021"

authors = ["Filippo Ranza <filipporanza@gmail.com>"]
license = "MIT"
description = "A simple graph implementation"
repository = "https://github.com/FilippoRanza/simplegraph"
keywords = ["graph", "graph-theory", "simple-graph", "direct-graph", "undirect-graph"]
readme = "README.md"

[dependencies]
ndarray = "0.15.4"
num-traits = "0.2.14"
serde = {version = "1", features = ["derive"]}

[dev-dependencies]
serde_json = "1.0.79"
